tests/test_files_pa3/errors/LocalVarsNotInitB4Use.ic
class A1
{
	static void main(string[] args) { }
	void a()
	{
		int b;
		func(b);	
	}
	
	void func(int a)
	{
	}
}

class A2
{
	void a()
	{		
		int b;
		int c = 5;
		b = c + b;
	}
}

class A3
{
	void a()
	{
		int b;
		while (1 > 0)
		{
			b = 5;
		}
		b = b + 5;
	}
}

class A4
{
	int a()
	{
		int b;
		return b;
	}
}

class A5
{
	void a()
	{
		int b;
		int c = b;
	}
}

class A6
{
	void a()
	{
		int b;
		int[] c = new int[12];		
		c[b] = 5;
	}
}

class A7
{
	void a()
	{
		int[] b;
		int c;
		c = b.length;
	}
}

class A8
{
	void a()
	{
		int[] b;
		int[] c;
		c = b;
	}
}

class A9
{
	int a()
	{
		int b;
		if (1 > 0)
		{
			b = 5;
		}
		else if (0 <= 1)
		{
			b = 5;
		}
		else
		{
		}
		
		return b;
	}
}

class A10
{
	int a()
	{
		int b;
		if (1 < 0)
		{
		}
		else
			b = 5;
		
		return b;
	}
}

class A11
{
	int[] a()
	{
		int[] b;
		return b;
	}
}

class A12
{
	void a()
	{
		int b;
		int[] c = new int[b];
	}
}

class A13
{
	void a()
	{
		int b;
		int[] c;
		c = new int[b];
	}
}

class A15
{
	int b;
	
	int a()
	{
		b = 5;
		int b;
		return b;
	}
}

class A16
{
	int a()
	{
		int b = 0;
	
		if (b == 0)
		{
			int c;
			return c;
		}
		
		return b;
	}
}

class A17
{
	void a()
	{
		int b;
		int c;
		b = 5;
		
		if (b > 4)
		{
			int b;			
			c = b;
		}
	}
}

class A18
{
	int a()
	{
		int b;
		
		{
			int b = b;
			b = 5;
			return b;
		}
	}
}